[package]
name = "rltk-roguelike"
version = "0.1.0"
authors = ["Michael Suggs <suggs.michael.jeffrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rltk = { version = "0.8.1", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
